# stranger_bayes

./: .gitignore  README.md  environment.yml  pyproject.toml
data_collection/: fetch_tmdb_episodes.py
docs/: season_hierarchy_model.md
src/: api.py  main.py  season_hierarchical_model.py
utils/: config.py
