[project]
name = "stranger-bayes"
version = "0.1.0"
description = ""
authors = [
    {name = "Eshaan Minocha"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3",
    "requests>=2.25",
    "dotenv (>=0.9.9,<0.10.0)"
]
packages = [
  { include = "stranger_bayes" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
